<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".DrawingActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="14"
        android:orientation="vertical"
        android:background="@color/darkGray">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true">

                <LinearLayout
                    android:id="@+id/frameLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
            </ScrollView>

            <Button
                android:id="@+id/addFrameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:text="@string/add_frame_button"/>
        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/mainImageView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="60"
        android:layout_margin="15dp"
        android:background="@color/lightGray"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="13"
        android:orientation="vertical"
        android:background="@color/darkGray">

        <RelativeLayout
            android:id="@+id/paletteRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/addColorButton"
                android:layout_alignParentStart="true">


                <LinearLayout
                    android:id="@+id/paletteLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
            </ScrollView>

            <Button
                android:id="@+id/addColorButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/newPaletteButton"
                android:text="@string/add_color_button"/>

            <Button
                android:id="@+id/newPaletteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/fillBitmapButton"
                android:text="@string/new_palette_button"/>

            <Button
                android:id="@+id/fillBitmapButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/clearBitmapButton"
                android:text="@string/fill_bitmap_button"/>

            <Button
                android:id="@+id/clearBitmapButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:text="@string/clear_bitmap_button"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="13"
        android:orientation="vertical"
        android:background="@color/darkGray">

        <ImageView
            android:id="@+id/currentColorImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"/>

    </LinearLayout>

</LinearLayout>